# mpd_gem_view_ssp

./: .gitignore  LICENSE  Makefile  README.md  ThinGap_batch_Eff_TG4_ArCO2.sh  ThinGap_batch_Eff_TG4_KrCO2.sh  ThinGap_batch_PosRes_TG1_STD.sh  ThinGap_batch_PosRes_TG2_TG3.sh  ThinGap_batch_PosRes_TG4_ArCO2.sh  ThinGap_batch_PosRes_TG4_KrCO2.sh  analyze_run  analyze_run_multi_core  batch.sh  batchEvince1.sh  batchMerge_run.sh  batchTDIS.sh  clean_cache_files.sh  command_log.txt  config  database  divide_jobs.sh  merge_run _backup.sh  merge_run.sh  monitor.sh  mpd_gem_view.pro  multiMerge_run.sh  setup_env.sh  xtracking
Rootfiles/: .gitignore
alignment/: CMakeLists.txt  ToyModel.cpp  ToyModel.h  alignment.pro  matrix.cpp  matrix.h  ref.txt  standard_align.cpp  standard_align.h  test.cpp
config/: gem.conf  gem_tracking.conf  gem_tracking.conf_setup1_run_period2d0_HV_Scan  gem_tracking.conf_setup1_run_period2d1_HV_Scan  gem_tracking.conf_setup2_run_period1_0degree  gem_tracking.conf_setup2_run_period1_0degree_Kr  gem_tracking.conf_setup2_run_period1_12degree  gem_tracking.conf_setup2_run_period1_12degree_Kr  gem_tracking.conf_setup2_run_period1_15degree  gem_tracking.conf_setup2_run_period1_15degree_Kr  gem_tracking.conf_setup2_run_period1_18degree  gem_tracking.conf_setup2_run_period1_18degree_Kr  gem_tracking.conf_setup2_run_period1_21degree  gem_tracking.conf_setup2_run_period1_21degree_Kr  gem_tracking.conf_setup2_run_period1_24degree  gem_tracking.conf_setup2_run_period1_27degree  gem_tracking.conf_setup2_run_period1_27degree_Kr  gem_tracking.conf_setup2_run_period1_30degree  gem_tracking.conf_setup2_run_period1_33degree  gem_tracking.conf_setup2_run_period1_33degree_Kr  gem_tracking.conf_setup2_run_period1_36degree  gem_tracking.conf_setup2_run_period1_39degree  gem_tracking.conf_setup2_run_period1_39degree_Kr  gem_tracking.conf_setup2_run_period1_3degree  gem_tracking.conf_setup2_run_period1_3degree_Kr  gem_tracking.conf_setup2_run_period1_42degree  gem_tracking.conf_setup2_run_period1_45degree  gem_tracking.conf_setup2_run_period1_45degree_Kr  gem_tracking.conf_setup2_run_period1_6degree  gem_tracking.conf_setup2_run_period1_6degree_Kr  gem_tracking.conf_setup2_run_period1_9degree  gem_tracking.conf_setup2_run_period1_9degree_Kr  gem_tracking.conf_setup2_run_period1_HV_Scan  gem_tracking.conf_setup2_run_period1_HV_Scan_Kr  gem_tracking.conf_setup2_run_period3_0degree  gem_tracking.conf_setup2_run_period3_12degree  gem_tracking.conf_setup2_run_period3_15degree  gem_tracking.conf_setup2_run_period3_21degree  gem_tracking.conf_setup2_run_period3_27degree  gem_tracking.conf_setup2_run_period3_33degree  (+26 more)
database/: CommonModeRange_255.txt  CommonModeRange_256.txt  CommonModeRange_310.txt  CommonModeRange_319.txt  CommonModeRange_3320.txt  CommonModeRange_348.txt  CommonModeRange_3772.txt  CommonModeRange_424.txt  CommonModeRange_429.txt  CommonModeRange_434.txt  CommonModeRange_487.txt  CommonModeRange_527.txt  CommonModeRange_546.txt  CommonModeRange_55.txt  CommonModeRange_564.txt  CommonModeRange_584.txt  CommonModeRange_94.txt  gem_map_10x10.txt  gem_map_BigBite_J2swap.txt  gem_map_GEN.txt  gem_map_TDIS.txt  gem_map_hallc.txt  gem_map_mpd_uva_MOLLER.txt  gem_map_prad2.txt  gem_map_prad2_hallb.txt  gem_map_srs_MOLLER.txt  gem_map_srs_XW.txt  gem_map_srs_cern.txt  gem_map_srs_fermilab.txt  gem_map_srs_fermilab_runGroup1.txt~  gem_map_srs_fermilab_runGroup2.txt~  gem_map_srs_fermilab_setup1_run_period2.txt  gem_map_srs_fermilab_setup2_run_period1.txt  gem_map_srs_fermilab_setup2_run_period3.txt  gem_map_srs_fermilab_setup2_run_period4.txt  gem_map_srs_frib.txt  gem_map_srs_pietro.txt  gem_map_srs_pixel.txt  gem_map_srs_remove2.txt  pedestal.root  (+2 more)
decoder/: Makefile  decoder.pro
decoder/evio-5.2/: CMakeLists.txt
documents/: gem_pedestal_calculation.txt
env/: setup_xinzhan.csh
epics/: epics.pro  epics_map.txt  readme.txt
fadc/: Makefile  fadc.pro
gem/: .qmake.stash  Makefile  config  database  gem.pro
gui/: Makefile  gui.pro
millepede/: alignment.py
replay/: replay.pro
scripts/: check_strip_to_pixel.cpp  cluster_tree_analyze_example.cpp  (+15 more)
tracking_dev/: CMakeLists.txt  Makefile.tracking_dev  fermi_tracks.txt  tracking_dev.pro  tracking_dev_app.pro
tracking_dev/include/: AbstractDetector.h  CoordSystem.h  Detector2DHitItem.h  Detector2DHitView.h  Detector2DItem.h  Detector2DView.h  IsometricView.h  Tracking.h  TrackingConfigWidget.h  TrackingDataHandler.h  TrackingResultPanel.h  TrackingUtility.h  Viewer.h  VirtualDetector.h  histos.hpp  tracking_struct.h
tracking_dev/scripts/: plot.cpp
tracking_dev/src/: AbstractDetector.cpp  CoordSystem.cpp  Detector2DHitItem.cpp  Detector2DHitView.cpp  Detector2DItem.cpp  Detector2DView.cpp  IsometricView.cpp  Tracking.cpp  TrackingConfigWidget.cpp  TrackingDataHandler.cpp  TrackingResultPanel.cpp  TrackingUtility.cpp  Viewer.cpp  VirtualDetector.cpp  main.cpp  tracking_struct.cpp
(+292 files in other folders)
